fix header font size on mobile

--- a/CodeBlog/CodeBlog/static/css/NerdVenture.css
+++ b/CodeBlog/CodeBlog/static/css/NerdVenture.css
@@ -1,6 +1,6 @@
 body{
     background-color: #ededef;
-    font-size: 1.3em;
+    font-size: 1.2em;
     -webkit-font-smoothing: antialiased;
 }
 
