--- a/CodeBlog/blog/static/blog/css/blog.css
+++ b/CodeBlog/blog/static/blog/css/blog.css
@@ -18,9 +18,15 @@
 }
 
 #post-title{
-  font-size: 3em;
+  font-size: 2.5em;
   font-weight: 500;
   text-transform: capitalize;
+}
+
+@media (max-width: 768px){
+    #post-title{
+        font-size: 8vw;
+    }
 }
 
 .sidebar-offset{
